clean and edits

--- a/_publications/2015-12-gi-prsb.md
+++ b/_publications/2015-12-gi-prsb.md
@@ -14,7 +14,9 @@ In this work, we provide a simple and generic theoretical framework that links o
 We also explain why the observed generation-interval distributions change over time; the animation (available as supplementary material of the paper) below illustrates our findings:
 ![gi-movie](/images/2015-11-02-movie_GI.gif)
 
-We also provide a methodology to fit epidemiological models to observed contact tracing data that, unlike a naive but ubiquitous approach, correctly takes into account the nature of observed data.
+These animated cuves are explained in details in the paper, but the key point here is that we show, for the first time, the analytical equations that describe the evolution of the observed generation interval distributions (middle row) as the epidemic progresses.
+
+Finally, we give a methodology to fit epidemiological models to observed contact tracing data that, unlike a naive but ubiquitous approach, correctly takes into account the nature of observed data.
 
 This paper is freely available at the [Royal Society website](https://doi.org/10.1098/rspb.2015.2026).
 
